# headless-cms

./: .gitignore
backend/: Cargo.toml
backend/migrations/: 20230502103321_schema.sql
backend/src/: main.rs  router.rs
backend/src/libs/: generate_random_key.rs  mod.rs
backend/src/models/: content_items.rs  content_types.rs  fields.rs  mod.rs  prelude.rs  role_permissions.rs  roles.rs  services.rs
backend/src/router_comp/: auth_router.rs  content_router.rs  mod.rs  service_router.rs
common-ui/: package.json
common-ui/src/lib/: Header.svelte  Page.svelte  index.js
common-ui/src/stories/: Button.stories.ts  Header.stories.ts  Page.stories.ts
components/: Header.tsx  Hero.tsx
docker/: docker-compose.yml
docs/: .gitignore  package.json
docs/src/pages/: index.astro
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/.storybook/: main.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[auth0]/: route.ts
frontend/src/app/api/dashboard/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: CommonHeader.tsx  Favorites.tsx  Login.tsx  Logout.tsx  MainContent.tsx  Settings.tsx  Sidebar.tsx  Trending.tsx
frontend/src/routes/: dashboard.tsx  home.tsx  login.tsx  logout.tsx
frontend/src/stories/: Button.tsx
islands/: LoginForm.tsx  SignUp.tsx
routes/: signup.tsx
routes/dashboard/: index.tsx
routes/login/: index.tsx
tools/: proxy.ts
www/: nuxt.config.ts  package.json
www/pages/: index.vue
