[package]
name = "headless-cms"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the rust framework we will be using - https://github.com/tokio-rs/axum/
axum = {version="0.6.1", features = ["headers"]}
# extra functionality for Axum https://github.com/tokio-rs/axum/
axum-extra = { version = "0.6.0", features = ["spa", "cookie-private"] }
axum-macros = "0.3.7"
# encryption hashing for passwords - https://github.com/Keats/rust-bcrypt
bcrypt = "0.14.0"
# used for writing the CORS layer - https://github.com/hyperium/http
http = "0.2.9"
# send emails over SMTP - https://github.com/lettre/lettre
lettre = "0.10.3"
# random number generator (for creating a session id) - https://github.com/rust-random/rand
rand = "0.8.5"
# used to be able to deserialize structs from JSON - https://github.com/serde-rs/serde
serde = { version = "1.0.152", features = ["derive"] }
# environment variables on shuttle
shuttle-secrets = "0.16.0"
# the service wrapper for shuttle
shuttle-runtime = "0.16.0"
# allow us to use axum with shuttle
shuttle-axum = "0.16.0"
# this is what we use to get a shuttle-provisioned database
shuttle-shared-db = { version = "0.16.0", features = ["postgres"] }
# we use this to query and connect to a database - https://github.com/launchbadge/sqlx/
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
# middleware for axum router_comp - https://github.com/tower-rs/tower-http
tower-http = { version = "0.4.0", features = ["cors", "add-extension", "map-request-body"] }
# pre-req for using shuttle runtime
tokio = "1.26.0"
tokio-test = "0.4.2"
# get a time variable for setting cookie max age
time = "0.3.20"
dotenv = "0.15.0"
tower = "0.4.12"
uuid = "1.3.2"
serde_json = "1.0.96"
anyhow = "1.0.71"
futures = "0.3.28"
chrono = "0.4.24"
sea-orm = {version="0.11.3", features=["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
# used for local testing
axum-server = {version="0.5.1", features=["tls-openssl"]}
