[package]
name = "headless-cms"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.1", features = ["headers"]}
axum-extra = { version = "0.6.0", features = ["spa", "cookie-private"] }
axum-macros = "0.3.7"
bcrypt = "0.14.0"
http = "0.2.9"
lettre = "0.10.3"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
tower-http = { version = "0.4.0", features = ["cors", "add-extension", "map-request-body", "fs"] }
tokio = "1.26.0"
tokio-test = "0.4.2"
time = "0.3.20"
dotenv = "0.15.0"
tower = { version = "0.4.12", features = ["limit"] }
uuid = { version = "1.3.3", features = ["v4"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
futures = "0.3.28"
chrono = "0.4.24"
sea-orm = {version="0.11.3", features=["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
axum-server = {version="0.5.1", features=["tls-openssl"]}
tracing-subscriber = "0.3.17"
jsonwebtoken = "8.3.0"
hyper-tls = "0.5.0"
hyper = "0.14.27"
env_logger = "0.10.0"
log = "0.4.19"
